# FitGPT

./: .gitignore  Dockerfile  README.md  app.py  asset-manifest.json  docker-compose.yml  index.html  package-lock.json  requirements.txt  vercel.json
.devcontainer/: devcontainer.json
backend/: Dockerfile  app.py  download_model.py  email_service.py  fitgpt-32ad7-firebase-adminsdk-fbsvc-0557ed928e.json  models.py  otp_utils.py  pyproject.toml  requirements.txt
backend/advisors/: mistral_advisor.py
backend/data/: dataLoader.py  exerciseData.json  gym_exercise_dataset.json
backend/src/: chat.py  test.py  workout_generator.py  workout_history.py
backend/src/templates/: condensed_question.txt  rag_prompt.txt
data/: exerciseData.json  megaGymDataset.csv
frontend/: .env.production  Dockerfile  package-lock.json  package.json
frontend/src/: About.css  About.js  App.css  App.js  Contact.css  Contact.js  Content.css  Content.js  Header.css  Header.js  Home.css  Home.js  firebase.js
frontend/src/components/: Auth.css  Auth.js  Chat.css  Chat.js  TimeoutWarning.css  TimeoutWarning.js  WorkoutHistory.js
src/: dataLoader.py  test.py
static/css/: main.5a341aca.css  main.5a341aca.css.map
static/js/: main.4ccb1251.js  main.4ccb1251.js.map
